--- a/app/src/main/res/layout/page_list.xml
+++ b/app/src/main/res/layout/page_list.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/holo_green_light">
+<!--    <com.hd.framework.CadPlaceView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
 <!--    <com.yalantis.phoenix.PullToRefreshView-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="match_parent">-->
@@ -10,7 +14,7 @@
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"/>-->
 <!--    </com.yalantis.phoenix.PullToRefreshView>-->
-    <com.xhh.ui.rv.RefreshLayout
+    <com.xhh.ui.rv.RefreshRecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
