--- a/UI/src/main/res/layout/f_coordinator.xml
+++ b/UI/src/main/res/layout/f_coordinator.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -11,11 +11,16 @@
       <com.google.android.material.appbar.MaterialToolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize">
+          android:layout_height="wrap_content">
          <com.google.android.material.textview.MaterialTextView
              android:layout_width="wrap_content"
-             android:layout_height="match_parent"/>
+             android:layout_height="match_parent"
+             android:layout_gravity="center"
+             android:textSize="16sp"
+             android:textStyle="bold"
+             android:gravity="center"
+             />
       </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</com.google.android.material.circularreveal.coordinatorlayout.CircularRevealCoordinatorLayout>
